feat: add text about me

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <body>
     <main>
-      <section class="presentation">
+      <section class="summary">
         <div class="container">
           <div class="name">
             <h1>Lera Buryak</h1>
@@ -23,10 +23,25 @@
               </li>
             </ul>
           </div>
-          <div class="presentation-img">
-            <img src="/rsschool-cv/asses/logo.jpg" alt="my-photo" class="my-photo" />
+          <div class="logo">
+            <img src="/rsschool-cv/asses/logo.jpg" alt="logo" class="logo"/>
           </div>
         </div>
       </section>
+      <section class="text-summary">
+        <div class="container">
+          <div class="block-heading">
+            <h2>Summary</h2>
+          </div>
+          <div class="about-text">
+            <p>
+              I started front-end development education in 2020.
+              At first I learned the basics on <a href="https://htmlacademy.ru" target="_blank">HTMLacademy</a> and at the same time I watched video tutorials on YouTube.
+              Now i'm taking courses <a href = "https://rs.school" target="_blank">rs-school</a>.
+            </p>
+            </div>
+          </div>
+          </section>
+          
 </body>
 </html>
