feat: add techical ckills

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       </section>
       <section class="text-summary">
         <div class="container">
-          <div class="block-heading">
             <h2>Summary</h2>
           </div>
           <div class="about-text">
@@ -42,6 +41,21 @@
             </div>
           </div>
           </section>
-          
+          <section class="skills">
+            <div class="container">
+                <h2>Technical skills</h2>
+              </div>
+              <div class="separator"></div>
+              <div class="skillset">
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Basic JS</li>
+                  <li>VSCode</li>
+                </ul>
+              </div>
+            </div>
+          </section>
+
 </body>
 </html>
