feat: add about experience

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             <div class="container">
                 <h2>Technical skills</h2>
               </div>
-              <div class="separator"></div>
               <div class="skillset">
                 <ul>
                   <li>HTML</li>
@@ -55,6 +54,12 @@
                 </ul>
               </div>
             </div>
+          </section>
+          <section class ="experience">
+            <div class="container">
+              <h2>Experience</h2>
+            </div>
+            <a href="https://github.com/leraburyak" target="_blank">GitHub</a>
           </section>
 
 </body>
