feat: add education

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
             </div>
             <a href="https://github.com/leraburyak" target="_blank">GitHub</a>
           </section>
+          <section class="Education">
+            <div class="container">
+              <h2>
+                Education
+              </h2>
+            </div>
+            <ul>
+              <li><a href="https://htmlacademy.ru/profile/id1503883">HTMLacademy</a></li>
+              <li><a href="https://praktikum.yandex.ru/profile/web/">praktikum.yandex.ru</a></li>
+              <li><a href="https://glo.academy/">Glo Academy</a></li>
+            </ul>
+          </section>
 
 </body>
 </html>
