feat: add info about english

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
               <li><a href="https://glo.academy/">Glo Academy</a></li>
             </ul>
           </section>
+          <section class ="english">
+            <div class="container">
+              <h2>English</h2>
+            </div>
+            <p>Elementary</p>
+          </section>
 
 </body>
 </html>
