feat: add footer

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
             </div>
             <p>Elementary</p>
           </section>
-
-</body>
+          <footer class="footer">
+            <div class="container">
+              <p>2020</p>
+            </div>
+          </footer>
+      </main>
+   </body>
 </html>
