--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
           <div class="name">
             <h1>Lera Buryak</h1>
-            <h3>Junior Front-end Developer</h3>
+            <h2>Junior Front-end Developer</h2>
           </div>
           <div class="contacts">
             <ul>
@@ -47,7 +47,7 @@
             <div class="container">
                 <h2>Technical skills</h2>
               </div>
-              <div class="skillset">
+              <div class="skill">
                 <ul>
                   <li>HTML</li>
                   <li>CSS</li>
