fix: font-size and footer

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           </div>
           <div class="about-text">
             <p>
-              I started front-end development education in 2020.
-              At first I learned the basics on <a href="https://htmlacademy.ru" target="_blank">HTMLacademy</a> and at the same time I watched video tutorials on YouTube.
-              Now i'm taking courses <a href = "https://rs.school" target="_blank">rs-school</a>.
+              I started front-end development education in 2020.</p>
+              <p>At first I learned the basics on <a href="https://htmlacademy.ru" target="_blank">HTMLacademy</a> and at the same time I watched video tutorials on YouTube.
+              Now i'm taking courses <a href = "https://rs.school" target="_blank">rs-school</a>.</p>
             </p>
             </div>
           </div>
